# RedFox-Laser

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt
core/src/audio/: AudioAnalysis.cpp  AudioAnalysis.hpp  BeatDetector.cpp  BeatDetector.hpp
core/src/effects/: MotionEffect.cpp  MotionEffect.hpp  Oscillator.cpp  Oscillator.hpp
core/src/ilda/: IldaCodec.cpp  IldaCodec.hpp  IldaTypes.hpp
core/src/midi/: MidiMap.cpp  MidiMap.hpp  MidiParser.cpp  MidiParser.hpp  MidiTypes.hpp
core/src/show/: CuePlayback.cpp  CuePlayback.hpp  DemoContent.cpp  DemoContent.hpp  Show.hpp  ShowEditing.cpp  ShowEditing.hpp  ShowFile.cpp  ShowFile.hpp  Timeline.cpp  Timeline.hpp  Transform.cpp  Transform.hpp
core/tests/: CMakeLists.txt  test_audio.cpp  test_cue_playback.cpp  test_effects.cpp  test_ilda_file.cpp  test_ilda_indexed.cpp  test_ilda_roundtrip.cpp  test_midi.cpp  test_motion_effects.cpp  test_show_editing.cpp  test_show_file.cpp  test_timeline.cpp
engine/: CMakeLists.txt
engine/src/: main.cpp
engine/src/audio/: AudioInput.cpp  AudioInput.hpp  miniaudio_impl.cpp
engine/src/ipc/: CommandPipeClient.cpp  CommandPipeClient.hpp  CommandPipeServer.cpp  CommandPipeServer.hpp  Commands.hpp  SharedTelemetry.hpp  TelemetryClient.cpp  TelemetryClient.hpp  TelemetryHost.cpp  TelemetryHost.hpp
engine/src/midi/: MidiInput.cpp  MidiInput.hpp
engine/src/output/: ArtNetOutput.cpp  ArtNetOutput.hpp  ArtNetPacket.cpp  ArtNetPacket.hpp  LaserOutput.hpp  LiberaLaserOutput.cpp  LiberaLaserOutput.hpp  MockLaserOutput.hpp
engine/src/playback/: FrameGenerator.cpp  FrameGenerator.hpp  Sequencer.cpp  Sequencer.hpp
engine/src/safety/: Clock.hpp  SafetyEventLog.cpp  SafetyEventLog.hpp  SafetyState.hpp  SafetySupervisor.cpp  SafetySupervisor.hpp
engine/tests/: CMakeLists.txt  test_artnet.cpp  test_artnet_output.cpp  test_clock.cpp  test_command_pipe.cpp  test_frame_generator.cpp  test_mock_laser_output.cpp  test_safety_supervisor.cpp  test_sequencer.cpp  test_smoke.cpp  test_telemetry_channel.cpp
tools/engine_console/: CMakeLists.txt  main.cpp
tools/idn_probe/: CMakeLists.txt  main.cpp
ui/: CMakeLists.txt
ui/src/: EditorWindow.cpp  EditorWindow.hpp  LaserCanvas.cpp  LaserCanvas.hpp  MainWindow.cpp  MainWindow.hpp  PreviewWidget.cpp  PreviewWidget.hpp  TimelineEditor.cpp  TimelineEditor.hpp  TimelineRuler.cpp  TimelineRuler.hpp  main.cpp
